httpbin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpbin-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /httpbin 
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: |
      Host(`traefik.mykubernetes.com`) && PathPrefix(`/httpbin`) 
    services:
    - name: httpbin
      port: 443
      #serversTransport: httpbin
      scheme: http
    middlewares:
    - name: httpbin-strip-prefix
      namespace: default 
  tls:
    secretName: traefik-httpbin-cert # See certs/README.md
